Adding a new version of Widoco

--- a/WidocoDocumentation/sections/overview-en.html
+++ b/WidocoDocumentation/sections/overview-en.html
@@ -4,156 +4,177 @@ This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
 <ul class="hlist">
    <li>
+      <a href="#AbductiveTask" title="https://purl.org/heals/eo#AbductiveTask">Abductive Task</a>
+   </li>
+   <li>
       <a href="#ArtificialIntelligenceMethod"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ArtificialIntelligenceMethod">AI Method</a>
+         title="https://purl.org/heals/eo#ArtificialIntelligenceMethod">AI Method</a>
    </li>
    <li>
-      <a href="#AITask"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#AITask">Artificial Intelligence Task</a>
+      <a href="#AITask" title="https://purl.org/heals/eo#AITask">Artificial Intelligence Task</a>
    </li>
    <li>
-      <a href="#Case_Based_Explanation"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Case_Based_Explanation">Case Based Explanation</a>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0028401" title="http://purl.obolibrary.org/obo/OMIT_0028401">Biological Ontologies</a>
    </li>
    <li>
-      <a href="#ClinicalPearl"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ClinicalPearl">Clinical Pearls</a>
+      <a href="#Case_Based_Explanation" title="https://purl.org/heals/eo#Case_Based_Explanation">Case Based Explanation</a>
    </li>
    <li>
-      <a href="#Contextual_Explanation"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Contextual_Explanation">Contextual Explanation</a>
+      <a href="#ClinicalPearl" title="https://purl.org/heals/eo#ClinicalPearl">Clinical Pearls</a>
    </li>
    <li>
-      <a href="#Contextual_Knowledge"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Contextual_Knowledge">Contextual Knowledge</a>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0001177" title="http://purl.obolibrary.org/obo/OMIT_0001177">Computer Heuristics</a>
+   </li>
+   <li>
+      <a href="#Contextual_Explanation" title="https://purl.org/heals/eo#Contextual_Explanation">Contextual Explanation</a>
+   </li>
+   <li>
+      <a href="#Contextual_Knowledge" title="https://purl.org/heals/eo#Contextual_Knowledge">Contextual Knowledge</a>
    </li>
    <li>
       <a href="#Contrastive_Explanation"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Contrastive_Explanation">Contrastive Explanation</a>
+         title="https://purl.org/heals/eo#Contrastive_Explanation">Contrastive Explanation</a>
    </li>
    <li>
-      <a href="#Counterfactual"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Counterfactual">Counterfactual Explanation</a>
+      <a href="#Counterfactual" title="https://purl.org/heals/eo#Counterfactual">Counterfactual Explanation</a>
    </li>
    <li>
-      <a href="#Environmental_Context"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Environmental_Context">Environmental Context</a>
+      <a href="#DecisionTree" title="https://purl.org/heals/eo#DecisionTree">Decision Tree</a>
    </li>
    <li>
-      <a href="#Everyday"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Everyday">Everyday Explanation</a>
+      <a href="#DeductiveTask" title="https://purl.org/heals/eo#DeductiveTask">Deductive Task</a>
+   </li>
+   <li>
+      <a href="#Environmental_Context" title="https://purl.org/heals/eo#Environmental_Context">Environmental Context</a>
+   </li>
+   <li>
+      <a href="#Everyday" title="https://purl.org/heals/eo#Everyday">Everyday Explanation</a>
    </li>
    <li>
       <a href="#Evidence_Based_Explanation"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Evidence_Based_Explanation">Evidence Based Explanation</a>
+         title="https://purl.org/heals/eo#Evidence_Based_Explanation">Evidence Based Explanation</a>
    </li>
    <li>
-      <a href="#ExperentialKnowledge"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ExperentialKnowledge">Experential Knowledge</a>
+      <a href="#ExperentialKnowledge" title="https://purl.org/heals/eo#ExperentialKnowledge">Experential Knowledge</a>
    </li>
    <li>
-      <a href="#ExplanationGoal"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ExplanationGoal">Explanation Goal</a>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0006327" title="http://purl.obolibrary.org/obo/OMIT_0006327">Expert Systems</a>
    </li>
    <li>
-      <a href="#ExplanationModality"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ExplanationModality">Explanation Modality</a>
+      <a href="#ExplanationGoal" title="https://purl.org/heals/eo#ExplanationGoal">Explanation Goal</a>
    </li>
    <li>
-      <a href="#FoilInSupportOfB"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#FoilInSupportOfB">Factual Knowledge that supports a system recommendation B</a>
+      <a href="#ExplanationModality" title="https://purl.org/heals/eo#ExplanationModality">Explanation Modality</a>
    </li>
    <li>
-      <a href="#FactInSupportOfA"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#FactInSupportOfA">Factual Knowledge that supports recommendation A</a>
+      <a href="#FoilInSupportOfB" title="https://purl.org/heals/eo#FoilInSupportOfB">Factual Knowledge that supports a system recommendation B</a>
    </li>
    <li>
-      <a href="#knowledge"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#knowledge">Knowledge</a>
+      <a href="#FactInSupportOfA" title="https://purl.org/heals/eo#FactInSupportOfA">Factual Knowledge that supports recommendation A</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0017538" title="http://purl.obolibrary.org/obo/OMIT_0017538">Fuzzy Logic</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0028314" title="http://purl.obolibrary.org/obo/OMIT_0028314">Gene Ontology</a>
+   </li>
+   <li>
+      <a href="#InductiveTask" title="https://purl.org/heals/eo#InductiveTask">Inductive Task</a>
+   </li>
+   <li>
+      <a href="#knowledge" title="https://purl.org/heals/eo#knowledge">Knowledge</a>
+   </li>
+   <li>
+      <a href="#KnowledgeBasedSystems" title="https://purl.org/heals/eo#KnowledgeBasedSystems">Knowledge based Systems</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0024712" title="http://purl.obolibrary.org/obo/OMIT_0024712">Knowledge Bases</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0001480" title="http://purl.obolibrary.org/obo/OMIT_0001480">Machine Learning</a>
    </li>
    <li>
       <a href="#Mechanistic_Explanation"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Mechanistic_Explanation">Mechanistic Explanation</a>
+         title="https://purl.org/heals/eo#Mechanistic_Explanation">Mechanistic Explanation</a>
    </li>
    <li>
-      <a href="#Numerical_Evidence"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Numerical_Evidence">Numerical Evidence</a>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0010354" title="http://purl.obolibrary.org/obo/OMIT_0010354">Natural Language Processing</a>
    </li>
    <li>
-      <a href="#object_record"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#object_record">Object Record</a>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0017046" title="http://purl.obolibrary.org/obo/OMIT_0017046">Neural Networks (Computer)</a>
    </li>
    <li>
-      <a href="#Reasoning_Mode"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Reasoning_Mode">Reasoning Mode</a>
+      <a href="#Numerical_Evidence" title="https://purl.org/heals/eo#Numerical_Evidence">Numerical Evidence</a>
    </li>
    <li>
-      <a href="#scientificExplanation"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#scientificExplanation">Scientific Explanation</a>
+      <a href="#object_record" title="https://purl.org/heals/eo#object_record">Object Record</a>
    </li>
    <li>
-      <a href="#ScientificKnowledge"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ScientificKnowledge">Scientific Knowledge</a>
+      <a href="#Reasoning_Mode" title="https://purl.org/heals/eo#Reasoning_Mode">Reasoning Mode</a>
    </li>
    <li>
-      <a href="#ScientificMethod"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ScientificMethod">Scientific Method</a>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0013278" title="http://purl.obolibrary.org/obo/OMIT_0013278">Robotics</a>
    </li>
    <li>
-      <a href="#Simulation_Based"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Simulation_Based">Simulation Based Explanation</a>
+      <a href="#scientificExplanation" title="https://purl.org/heals/eo#scientificExplanation">Scientific Explanation</a>
+   </li>
+   <li>
+      <a href="#ScientificKnowledge" title="https://purl.org/heals/eo#ScientificKnowledge">Scientific Knowledge</a>
+   </li>
+   <li>
+      <a href="#ScientificMethod" title="https://purl.org/heals/eo#ScientificMethod">Scientific Method</a>
+   </li>
+   <li>
+      <a href="#Simulation_Based" title="https://purl.org/heals/eo#Simulation_Based">Simulation Based Explanation</a>
    </li>
    <li>
       <a href="#Statistical_Explanation"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Statistical_Explanation">Statistical Explanation</a>
+         title="https://purl.org/heals/eo#Statistical_Explanation">Statistical Explanation</a>
    </li>
    <li>
-      <a href="#system_recommendation"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#system_recommendation">System Recommendation</a>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0001483" title="http://purl.obolibrary.org/obo/OMIT_0001483">Supervised Machine Learning</a>
    </li>
    <li>
-      <a href="#SystemTrace"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#SystemTrace">System Trace</a>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0027764" title="http://purl.obolibrary.org/obo/OMIT_0027764">Support Vector Machine</a>
    </li>
    <li>
-      <a href="#Trace_Based"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Trace_Based">Trace Based Explanation</a>
+      <a href="#system_recommendation" title="https://purl.org/heals/eo#system_recommendation">System Recommendation</a>
    </li>
    <li>
-      <a href="#user"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#user">User</a>
+      <a href="#SystemTrace" title="https://purl.org/heals/eo#SystemTrace">System Trace</a>
    </li>
    <li>
-      <a href="#User_Context"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#User_Context">User Context</a>
+      <a href="#Trace_Based" title="https://purl.org/heals/eo#Trace_Based">Trace Based Explanation</a>
+   </li>
+   <li>
+      <a href="#http://purl.obolibrary.org/obo/OMIT_0001486" title="http://purl.obolibrary.org/obo/OMIT_0001486">Unsupervised Machine Learning</a>
+   </li>
+   <li>
+      <a href="#user" title="https://purl.org/heals/eo#user">User</a>
+   </li>
+   <li>
+      <a href="#User_Context" title="https://purl.org/heals/eo#User_Context">User Context</a>
    </li>
 </ul><h4>Object Properties</h4><ul class="hlist">
    <li>
-      <a href="#addresses"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#addresses">addresses</a>
+      <a href="#addresses" title="https://purl.org/heals/eo#addresses">addresses</a>
    </li>
    <li>
-      <a href="#asks"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#asks">asks</a>
+      <a href="#asks" title="https://purl.org/heals/eo#asks">asks</a>
    </li>
    <li>
-      <a href="#hasPreferenceFor"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#hasPreferenceFor">has preference for</a>
+      <a href="#hasPreferenceFor" title="https://purl.org/heals/eo#hasPreferenceFor">has preference for</a>
    </li>
    <li>
-      <a href="#hasPresentation"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#hasPresentation">has presentation</a>
+      <a href="#hasPresentation" title="https://purl.org/heals/eo#hasPresentation">has presentation</a>
    </li>
    <li>
-      <a href="#implements"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#implements">implements</a>
+      <a href="#implements" title="https://purl.org/heals/eo#implements">implements</a>
    </li>
    <li>
-      <a href="#consumes"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#consumes">is consumer of</a>
+      <a href="#consumes" title="https://purl.org/heals/eo#consumes">is consumer of</a>
    </li>
    <li>
-      <a href="#possess"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#possess">possess</a>
+      <a href="#possess" title="https://purl.org/heals/eo#possess">possess</a>
    </li>
 </ul><iframe align="center" width="100%" height ="500px" src="webvowl/index.html"></iframe> 
