--- a/WidocoDocumentation/provenance/provenance-en.html
+++ b/WidocoDocumentation/provenance/provenance-en.html
@@ -7,7 +7,7 @@
 
 <body>
 <div class="head">
-<h1>Provenance for Explanations Ontology Documentation (http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology/1.0.0)</h1>
+<h1>Provenance for Explanations Ontology Documentation (https://purl.org/heals/eo/1.0.0)</h1>
 <ul>
 	<li>Ontology created by: Shruthi Chari</li>	<li>Ontology contributed to by:  Amar K. Das, Daniel M. Gruen, Deborah L. McGuinness, Morgan Foreman, Oshani Seneviratne</li>
 <li>The ontology documentation was the result of using the <a href="https://github.com/dgarijo/Widoco">Widoco tool</a> (which itself uses <a href="http://www.essepuntato.it/lode/">LODE</a> for generating the crossreference section).</li>
