--- a/WidocoDocumentation/sections/introduction-en.html
+++ b/WidocoDocumentation/sections/introduction-en.html
@@ -7,7 +7,7 @@ This is a place holder text for the introduction. The introduction should briefl
 <table>
 <caption> <a href="#ns"> Table 1</a>: Namespaces used in the document </caption>
 <tbody>
-<tr><td><b>eo</b></td><td>&lt;http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology&gt;</td></tr>
+<tr><td><b>eo</b></td><td>&lt;https://purl.org/heals/eo&gt;</td></tr>
 <tr><td><b>schema</b></td><td>&lt;http://schema.org&gt;</td></tr>
 <tr><td><b>data</b></td><td>&lt;http://linkedu.eu/dedalo/data&gt;</td></tr>
 <tr><td><b>owl</b></td><td>&lt;http://www.w3.org/2002/07/owl&gt;</td></tr>
@@ -21,6 +21,7 @@ This is a place holder text for the introduction. The introduction should briefl
 <tr><td><b>foaf</b></td><td>&lt;http://xmlns.com/foaf/0.1&gt;</td></tr>
 <tr><td><b>ontologies</b></td><td>&lt;https://raw.githubusercontent.com/tetherless-world/explanations-ontology/master/Ontologies&gt;</td></tr>
 <tr><td><b>ontology</b></td><td>&lt;http://semanticscience.org/ontology&gt;</td></tr>
+<tr><td><b>heals</b></td><td>&lt;https://purl.org/heals&gt;</td></tr>
 <tr><td><b>void</b></td><td>&lt;http://rdfs.org/ns/void&gt;</td></tr>
 <tr><td><b>resource</b></td><td>&lt;http://semanticscience.org/resource&gt;</td></tr>
 <tr><td><b>cpannotationschema</b></td><td>&lt;http://www.ontologydesignpatterns.org/schemas/cpannotationschema.owl&gt;</td></tr>
@@ -28,8 +29,8 @@ This is a place holder text for the introduction. The introduction should briefl
 <tr><td><b>situation-owl</b></td><td>&lt;http://www.ontologydesignpatterns.org/cp/owl/situation.owl&gt;</td></tr>
 <tr><td><b>explanationpattern-owl</b></td><td>&lt;http://linkedu.eu/dedalo/explanationPattern.owl&gt;</td></tr>
 <tr><td><b>dul-owl</b></td><td>&lt;http://www.ontologydesignpatterns.org/ont/dul/DUL.owl&gt;</td></tr>
-<tr><td><b>3</b></td><td>&lt;http://www.semanticweb.org/shruthichari/ontologies/2020/3&gt;</td></tr>
 <tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
+<tr><td><b>obo</b></td><td>&lt;http://purl.obolibrary.org/obo&gt;</td></tr>
 <tr><td><b>dc</b></td><td>&lt;http://purl.org/dc/elements/1.1&gt;</td></tr>
 </tbody>
 </table>
