Generating a new version of Widoco

--- a/WidocoDocumentation/index-en.html
+++ b/WidocoDocumentation/index-en.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
- <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Explanations Ontology</title>
+ <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Explanation Ontology</title>
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://purl.org/heals/eo","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://purl.org/heals/eo","name":"Explanations Ontology", "headline":"A simple ontology that encodes the system- and user- attributes of explanations that would allow them to be generated computationally. We develop this resource mainly for system designers guiding them to think about the available AI methods and reasoning tasks within their system that would be capable of generating explanations to suit the end-users' situation and requirements. We model attributes which are directly included in explanations and others that would help in their process of generation. We have used this schema to model different explanation types that address a range of questions each and their generational needs. We welcome feedback on extending this ontology to help in ontology generation in different use cases.", "datePublished":"Wed May 20 23:18:01 EDT 2020", "author":[{"@type":"Person","name":"Shruthi Chari"}], "contributor":[{"@type":"Person","name":"Amar K. Das"},{"@type":"Person","name":"Daniel M. Gruen"},{"@type":"Person","name":"Deborah L. McGuinness"},{"@type":"Person","name":"Morgan Foreman"},{"@type":"Person","name":"Oshani Seneviratne"}]}</script>
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://purl.org/heals/eo","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://purl.org/heals/eo","name":"Explanation Ontology", "headline":"The Explanation Ontology (EO) is an ontology that encodes the system- and user- attributes of explanations that would allow them to be generated computationally. This resource is mainly for system designers to guide them to think about the available AI methods and reasoning tasks within their system that would create explanations to suit the end-users' situation and requirements. EO includes attributes directly included in explanations and others that would help in their process of generation. EO also includes different explanation types that address a range of questions each and their generational needs.", "datePublished":"Fri May 22 20:53:28 EDT 2020", "author":[{"@type":"Person","name":"Shruthi Chari"}], "contributor":[{"@type":"Person","name":"Amar K. Das"},{"@type":"Person","name":"Daniel M. Gruen"},{"@type":"Person","name":"Deborah L. McGuinness"},{"@type":"Person","name":"Morgan Foreman"},{"@type":"Person","name":"Oshani Seneviratne"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -59,7 +59,7 @@ function loadTOC(){
 <div class="container">
 <div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
-<h1>Explanations Ontology</h1>
+<h1>Explanation Ontology</h1>
 
 
 <dl>
@@ -89,7 +89,7 @@ function loadTOC(){
 	limitations%20under%20the%20License.-blue.svg" alt="http://insertlicenseURIhere.org" /></a>
 </dd><dt>Visualization:</dt><dd><a href="webvowl/index.html#" target="_blank"><img src="https://img.shields.io/badge/Visualize_with-WebVowl-blue.svg" alt="Visualize with WebVowl" /></a></dd>
 <!-- <dt>Evaluation:</dt><dd><a href="OOPSEvaluation/OOPSeval.html#" target="_blank"><img src="https://img.shields.io/badge/Evaluate_with-OOPS! (OntOlogy Pitfall Scanner!)-blue.svg" alt="Evaluate with OOPS!" /></a></dd> --><dt>Cite as:</dt>
-<dd>Shruthi Chari. Ontology of Explanations. Retrieved from: https://purl.org/heals/eo/1.0.0</dd>
+<dd>Shruthi Chari. Explanation Ontology. Retrieved from: https://purl.org/heals/eo/1.0.0</dd>
 </dl>
 
 <a href="provenance/provenance-en.html" target="_blank">Provenance of this page</a><hr/>
