--- a/WidocoDocumentation/sections/introduction-en.html
+++ b/WidocoDocumentation/sections/introduction-en.html
@@ -9,12 +9,14 @@ This is a place holder text for the introduction. The introduction should briefl
 <tbody>
 <tr><td><b>eo</b></td><td>&lt;https://purl.org/heals/eo&gt;</td></tr>
 <tr><td><b>schema</b></td><td>&lt;http://schema.org&gt;</td></tr>
+<tr><td><b>explanationPattern</b></td><td>&lt;http://linkedu.eu/dedalo/explanationPattern.owl&gt;</td></tr>
 <tr><td><b>data</b></td><td>&lt;http://linkedu.eu/dedalo/data&gt;</td></tr>
 <tr><td><b>owl</b></td><td>&lt;http://www.w3.org/2002/07/owl&gt;</td></tr>
 <tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
 <tr><td><b>skos</b></td><td>&lt;http://www.w3.org/2004/02/skos/core&gt;</td></tr>
 <tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema&gt;</td></tr>
 <tr><td><b>cito</b></td><td>&lt;http://purl.org/spar/cito&gt;</td></tr>
+<tr><td><b>prov-o</b></td><td>&lt;http://www.w3.org/TR/prov-o&gt;</td></tr>
 <tr><td><b>terms</b></td><td>&lt;http://purl.org/dc/terms&gt;</td></tr>
 <tr><td><b>vann</b></td><td>&lt;http://purl.org/vocab/vann&gt;</td></tr>
 <tr><td><b>prov</b></td><td>&lt;http://www.w3.org/ns/prov&gt;</td></tr>
@@ -27,7 +29,6 @@ This is a place holder text for the introduction. The introduction should briefl
 <tr><td><b>cpannotationschema</b></td><td>&lt;http://www.ontologydesignpatterns.org/schemas/cpannotationschema.owl&gt;</td></tr>
 <tr><td><b>protege</b></td><td>&lt;http://protege.stanford.edu/plugins/owl/protege&gt;</td></tr>
 <tr><td><b>situation-owl</b></td><td>&lt;http://www.ontologydesignpatterns.org/cp/owl/situation.owl&gt;</td></tr>
-<tr><td><b>explanationpattern-owl</b></td><td>&lt;http://linkedu.eu/dedalo/explanationPattern.owl&gt;</td></tr>
 <tr><td><b>dul-owl</b></td><td>&lt;http://www.ontologydesignpatterns.org/ont/dul/DUL.owl&gt;</td></tr>
 <tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
 <tr><td><b>obo</b></td><td>&lt;http://purl.obolibrary.org/obo&gt;</td></tr>
