--- a/WidocoDocumentation/sections/overview-en.html
+++ b/WidocoDocumentation/sections/overview-en.html
@@ -1,4 +1,4 @@
-<h2 id="overv" class="list">Explanations Ontology: Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+<h2 id="overv" class="list">Explanation Ontology: Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
 This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
@@ -17,7 +17,7 @@ This ontology has the following classes and properties.</span>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0028401" title="http://purl.obolibrary.org/obo/OMIT_0028401">Biological Ontologies</a>
    </li>
    <li>
-      <a href="#Case_Based_Explanation" title="https://purl.org/heals/eo#Case_Based_Explanation">Case Based Explanation</a>
+      <a href="#CaseBasedExplanation" title="https://purl.org/heals/eo#CaseBasedExplanation">Case Based Explanation</a>
    </li>
    <li>
       <a href="#ClinicalPearl" title="https://purl.org/heals/eo#ClinicalPearl">Clinical Pearls</a>
@@ -26,17 +26,18 @@ This ontology has the following classes and properties.</span>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0001177" title="http://purl.obolibrary.org/obo/OMIT_0001177">Computer Heuristics</a>
    </li>
    <li>
-      <a href="#Contextual_Explanation" title="https://purl.org/heals/eo#Contextual_Explanation">Contextual Explanation</a>
+      <a href="#ContextualExplanation" title="https://purl.org/heals/eo#ContextualExplanation">Contextual Explanation</a>
    </li>
    <li>
       <a href="#Contextual_Knowledge" title="https://purl.org/heals/eo#Contextual_Knowledge">Contextual Knowledge</a>
    </li>
    <li>
-      <a href="#Contrastive_Explanation"
-         title="https://purl.org/heals/eo#Contrastive_Explanation">Contrastive Explanation</a>
+      <a href="#ContrastiveExplanation"
+         title="https://purl.org/heals/eo#ContrastiveExplanation">Contrastive Explanation</a>
    </li>
    <li>
-      <a href="#Counterfactual" title="https://purl.org/heals/eo#Counterfactual">Counterfactual Explanation</a>
+      <a href="#CounterfactualExplanation"
+         title="https://purl.org/heals/eo#CounterfactualExplanation">Counterfactual Explanation</a>
    </li>
    <li>
       <a href="#DecisionTree" title="https://purl.org/heals/eo#DecisionTree">Decision Tree</a>
@@ -48,7 +49,7 @@ This ontology has the following classes and properties.</span>
       <a href="#Environmental_Context" title="https://purl.org/heals/eo#Environmental_Context">Environmental Context</a>
    </li>
    <li>
-      <a href="#Everyday" title="https://purl.org/heals/eo#Everyday">Everyday Explanation</a>
+      <a href="#EverydayExplanation" title="https://purl.org/heals/eo#EverydayExplanation">Everyday Explanation</a>
    </li>
    <li>
       <a href="#Evidence_Based_Explanation"
@@ -67,10 +68,10 @@ This ontology has the following classes and properties.</span>
       <a href="#ExplanationModality" title="https://purl.org/heals/eo#ExplanationModality">Explanation Modality</a>
    </li>
    <li>
-      <a href="#FoilInSupportOfB" title="https://purl.org/heals/eo#FoilInSupportOfB">Factual Knowledge that supports a system recommendation B</a>
+      <a href="#Fact" title="https://purl.org/heals/eo#Fact">Fact</a>
    </li>
    <li>
-      <a href="#FactInSupportOfA" title="https://purl.org/heals/eo#FactInSupportOfA">Factual Knowledge that supports recommendation A</a>
+      <a href="#Foil" title="https://purl.org/heals/eo#Foil">Foil</a>
    </li>
    <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0017538" title="http://purl.obolibrary.org/obo/OMIT_0017538">Fuzzy Logic</a>
@@ -116,6 +117,16 @@ This ontology has the following classes and properties.</span>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0013278" title="http://purl.obolibrary.org/obo/OMIT_0013278">Robotics</a>
    </li>
    <li>
+      <a href="#http://semanticscience.org/resource/SIO_000010" title="http://semanticscience.org/resource/SIO_000010">
+         <span>s i o 000010</span>
+      </a>
+   </li>
+   <li>
+      <a href="#http://semanticscience.org/resource/SIO_001194" title="http://semanticscience.org/resource/SIO_001194">
+         <span>s i o 001194</span>
+      </a>
+   </li>
+   <li>
       <a href="#scientificExplanation" title="https://purl.org/heals/eo#scientificExplanation">Scientific Explanation</a>
    </li>
    <li>
@@ -125,11 +136,12 @@ This ontology has the following classes and properties.</span>
       <a href="#ScientificMethod" title="https://purl.org/heals/eo#ScientificMethod">Scientific Method</a>
    </li>
    <li>
-      <a href="#Simulation_Based" title="https://purl.org/heals/eo#Simulation_Based">Simulation Based Explanation</a>
+      <a href="#SimulationBasedExplanation"
+         title="https://purl.org/heals/eo#SimulationBasedExplanation">Simulation Based Explanation</a>
    </li>
    <li>
-      <a href="#Statistical_Explanation"
-         title="https://purl.org/heals/eo#Statistical_Explanation">Statistical Explanation</a>
+      <a href="#StatisticalExplanation"
+         title="https://purl.org/heals/eo#StatisticalExplanation">Statistical Explanation</a>
    </li>
    <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0001483" title="http://purl.obolibrary.org/obo/OMIT_0001483">Supervised Machine Learning</a>
@@ -144,7 +156,7 @@ This ontology has the following classes and properties.</span>
       <a href="#SystemTrace" title="https://purl.org/heals/eo#SystemTrace">System Trace</a>
    </li>
    <li>
-      <a href="#Trace_Based" title="https://purl.org/heals/eo#Trace_Based">Trace Based Explanation</a>
+      <a href="#TraceBasedExplanation" title="https://purl.org/heals/eo#TraceBasedExplanation">Trace Based Explanation</a>
    </li>
    <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0001486" title="http://purl.obolibrary.org/obo/OMIT_0001486">Unsupervised Machine Learning</a>
@@ -176,5 +188,50 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#possess" title="https://purl.org/heals/eo#possess">possess</a>
+   </li>
+</ul><h4>Named Individuals</h4><ul class="hlist">
+   <li>
+      <a href="#ContrastiveQuestion" title="https://purl.org/heals/eo#ContrastiveQuestion">"Why Drug A over Drug B?"</a>
+   </li>
+   <li>
+      <a href="#CounterfactualProbable2"
+         title="https://purl.org/heals/eo#CounterfactualProbable2">Addresses "What if the major problem was a fasting plasma glucose?"</a>
+   </li>
+   <li>
+      <a href="#CounterfactualProbable1"
+         title="https://purl.org/heals/eo#CounterfactualProbable1">Addresses "What other factors about the patient does the system know of?"</a>
+   </li>
+   <li>
+      <a href="#AITaskExample" title="https://purl.org/heals/eo#AITaskExample">Deductive task that generated a recommnendation used as a basis for a contrastive explanation</a>
+   </li>
+   <li>
+      <a href="#SystemRecExampleForContrastiveExpA"
+         title="https://purl.org/heals/eo#SystemRecExampleForContrastiveExpA">Drug A is not sufficient for this patient</a>
+   </li>
+   <li>
+      <a href="#GuidelineEvidence" title="https://purl.org/heals/eo#GuidelineEvidence">Drug B is a preferred drug</a>
+   </li>
+   <li>
+      <a href="#SystemRecExampleForContrastiveExpB"
+         title="https://purl.org/heals/eo#SystemRecExampleForContrastiveExpB">Guidelines recommend Drug B</a>
+   </li>
+   <li>
+      <a href="#ContrastiveExpInstance"
+         title="https://purl.org/heals/eo#ContrastiveExpInstance">Guidelines recommend Drug B for this patient</a>
+   </li>
+   <li>
+      <a href="#HyperglycemiaPatient" title="https://purl.org/heals/eo#HyperglycemiaPatient">Patient A with a condition</a>
+   </li>
+   <li>
+      <a href="#ContextualKnowledgePatientA"
+         title="https://purl.org/heals/eo#ContextualKnowledgePatientA">Patient has hyperglycemia</a>
+   </li>
+   <li>
+      <a href="#QuestionFromUserStudy2"
+         title="https://purl.org/heals/eo#QuestionFromUserStudy2">What if the major problem was a fasting plasma glucose?</a>
+   </li>
+   <li>
+      <a href="#QuestionFromUserStudy1"
+         title="https://purl.org/heals/eo#QuestionFromUserStudy1">What other factors about the patient does the system know of?</a>
    </li>
 </ul><iframe align="center" width="100%" height ="500px" src="webvowl/index.html"></iframe> 
