Pushing a version of introduction and references

--- a/WidocoDocumentation/index-en.html
+++ b/WidocoDocumentation/index-en.html
@@ -6,7 +6,7 @@
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://purl.org/heals/eo","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://purl.org/heals/eo","name":"Explanation Ontology", "headline":"The Explanation Ontology (EO) is an ontology that encodes the system- and user- attributes of explanations that would allow them to be generated computationally. This resource is mainly for system designers to guide them to think about the available AI methods and reasoning tasks within their system that would create explanations to suit the end-users' situation and requirements. EO includes attributes directly included in explanations and others that would help in their process of generation. EO also includes different explanation types that address a range of questions each and their generational needs.", "datePublished":"Fri May 22 20:53:28 EDT 2020", "author":[{"@type":"Person","name":"Shruthi Chari"}], "contributor":[{"@type":"Person","name":"Amar K. Das"},{"@type":"Person","name":"Daniel M. Gruen"},{"@type":"Person","name":"Deborah L. McGuinness"},{"@type":"Person","name":"Morgan Foreman"},{"@type":"Person","name":"Oshani Seneviratne"}]}</script>
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://purl.org/heals/eo","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://purl.org/heals/eo","name":"Explanation Ontology", "headline":"The Explanation Ontology (EO) is an ontology that encodes the system- and user- attributes of explanations that would allow them to be generated computationally. This resource is mainly for system designers to guide them to think about the available AI methods and reasoning tasks within their system that would create explanations to suit the end-users' situation and requirements. EO includes attributes directly included in explanations and others that would help in their process of generation. EO also includes different explanation types that address a range of questions each and their generational needs.", "datePublished":"Thu May 28 09:25:17 EDT 2020", "version":"1.0.0", "author":[{"@type":"Person","name":"Shruthi Chari"}], "contributor":[{"@type":"Person","name":"Amar K. Das"},{"@type":"Person","name":"Daniel M. Gruen"},{"@type":"Person","name":"Deborah L. McGuinness"},{"@type":"Person","name":"Morgan Foreman"},{"@type":"Person","name":"Oshani Seneviratne"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -65,6 +65,8 @@ function loadTOC(){
 <dl>
 <dt>This version:</dt>
 <dd><a href="https://purl.org/heals/eo/1.0.0">https://purl.org/heals/eo/1.0.0</a></dd>
+<dt>Revision:</dt>
+<dd>1.0.0</dd>
 <dt>Authors:</dt>
 <dd>Shruthi Chari</dd>
 
