--- a/WidocoDocumentation/sections/overview-en.html
+++ b/WidocoDocumentation/sections/overview-en.html
@@ -11,7 +11,7 @@ This ontology has the following classes and properties.</span>
          title="https://purl.org/heals/eo#ArtificialIntelligenceMethod">AI Method</a>
    </li>
    <li>
-      <a href="#AITask" title="https://purl.org/heals/eo#AITask">Artificial Intelligence Task</a>
+      <a href="#AITask" title="https://purl.org/heals/eo#AITask">AI Task</a>
    </li>
    <li>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0028401" title="http://purl.obolibrary.org/obo/OMIT_0028401">Biological Ontologies</a>
@@ -150,7 +150,7 @@ This ontology has the following classes and properties.</span>
       <a href="#http://purl.obolibrary.org/obo/OMIT_0027764" title="http://purl.obolibrary.org/obo/OMIT_0027764">Support Vector Machine</a>
    </li>
    <li>
-      <a href="#system_recommendation" title="https://purl.org/heals/eo#system_recommendation">System Recommendation</a>
+      <a href="#SystemRecommendation" title="https://purl.org/heals/eo#SystemRecommendation">System Recommendation</a>
    </li>
    <li>
       <a href="#SystemTrace" title="https://purl.org/heals/eo#SystemTrace">System Trace</a>
