Fixing author list

--- a/WidocoDocumentation/index-en.html
+++ b/WidocoDocumentation/index-en.html
@@ -71,7 +71,7 @@ function loadTOC(){
 <dd>Shruthi Chari</dd>
 
 <dt>Contributors:</dt>
-<dd>Amar K. Das</dd><dd>Daniel M. Gruen</dd><dd>Deborah L. McGuinness</dd><dd>Morgan Foreman</dd><dd>Oshani Seneviratne</dd>
+<dd>Oshani Seneviratne</dd><dd>Daniel M. Gruen</dd><dd>Morgan Foreman</dd><dd>Amar K. Das</dd><dd>Deborah L. McGuinness</dd>
 
 <dt>Imported Ontologies:</dt>
 <dd><a href="http://linkedu.eu/dedalo/explanationPattern.owl">explanationPattern.owl</a></dd><dd><a href="http://semanticscience.org/ontology/sio.owl">sio.owl</a></dd><dd><a href="http://www.ontologydesignpatterns.org/schemas/cpannotationschema.owl">cpannotationschema.owl</a></dd><dd><a href="http://www.w3.org/ns/prov-o#">prov-o#</a></dd>
