Changing a bit in EO Docs

--- a/EODocumentation/index-en.html
+++ b/EODocumentation/index-en.html
@@ -114,6 +114,11 @@ function loadTOC(){
 <div id="acknowledgments">
 <h2 id="ack" class="list">Acknowledgments <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <p>
+	This work is done as part of the <a href="https://idea.rpi.edu/research/projects/heals">HEALS project</a>, and is partially supported by <a href="https://www.research.ibm.com/artificial-intelligence/">IBM Research AI</a> through the AI Horizons Network. We thank our colleagues from IBM Research, including Ching-Hua Chen, and from <a href="https://rpi.edu">RPI</a>, Jamie P. McCusker, Sabbir M. Rashid and Rebecca Cowan, who provided insight and expertise that greatly assisted the research.
+	</p>
+	<br>
+<p>
+<p>
 The authors would like to thank <a href="http://www.essepuntato.it/">Silvio Peroni</a> for developing <a href="http://www.essepuntato.it/lode">LODE</a>, a Live OWL Documentation Environment, which is used for representing the Cross Referencing Section of this document and <a href="https://w3id.org/people/dgarijo">Daniel Garijo</a> for developing <a href="https://github.com/dgarijo/Widoco">Widoco</a>, the program used to create the template used in this documentation.</p>
 </div>
 
