--- a/EODocumentation/sections/references-en.html
+++ b/EODocumentation/sections/references-en.html
@@ -1,5 +1,13 @@
 
 <h2 id="ref" class="list">References <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<span class="markdown">
-Add your references here. It is recommended to have them as a list.</span>
+<ul>
+	<li>Chari, S., Gruen, D.M., Seneviratne, O., McGuinness, D.L.: Directions for Explainable
+Knowledge-Enabled Systems. In: Ilaria Tiddi, Freddy Lecue, Pascal Hitzler (eds.), Knowledge Graphs for eXplainable AI – Foundations, Applications and Challenges. Studies on the Semantic Web. p. 245 - 261. IOS Press (2020)</li>
+<li>Arya, V., Bellamy, R. K., Chen, P. Y., Dhurandhar, A., Hind, M., Hoffman, S. C., ... & Zhang, Y. (2019). One explanation does not fit all: A toolkit and taxonomy of ai explainability techniques. arXiv preprint arXiv:1909.03012.</li>
+<li>Mittelstadt, B., Russell, C.,Wachter, S.: Explaining explanations in AI. In: Proc. of
+the Conf. on fairness, accountability, and transparency. pp. 279–288. ACM (2019)</li>
+<li>Holzinger, A., Biemann, C., Pattichis, C.S., Kell, D.B.: What do we need to build
+explainable AI systems for the medical domain? arXiv preprint arXiv:1712.09923
+(2017)</li>
+</ul>
 
